--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -1,5 +1,14 @@
-《活在聖靈中 Keep in Step with the Spirit》
-巴刻（J．I．Packer）著 /霍玉蓮譯
+#+TITLE:《活在聖靈中 Keep in Step with the Spirit》 巴刻J．I．Packer著 /霍玉蓮譯
+
+* 目錄
+ - [[#1 看清楚聖靈][1 看清楚聖靈]]
+   - [[#蒙眼症][蒙眼症]]
+   - [[#認識並經歷神][認識並經歷神]]
+   - [[#聖靈的能力][聖靈的能力]]
+     - [[#基督徒的能力][基督徒的能力]]
+     - [[#能力的限制][能力的限制]]
+   - [[#表現 屬靈恩賜的運用][表現 屬靈恩賜的運用]]
+     - [[#總動員事奉][總動員事奉]]
 
 * 1 看清楚聖靈
 ** 蒙眼症
@@ -56,7 +65,7 @@
 
 　　討論下去，你就會漸漸明白我們真正的問題是需要對聖靈的教義有深刻而真確的洞見——這洞見的亮光能促使我們糾正對內在能力的謬說。不過，我打算暫且擱下這部分的論據，待我完成對聖靈問題的初步探討後才再談他。在目前的探討裏，我們只要記著一點，就是只談聖靈能力，根本不能針對問題的核心。
 
-** 表現——屬靈恩賜的運用
+** 表現 屬靈恩賜的運用
 　　其次，許多人認為聖靈的教義基本上與表現有關，意思是運用屬靈恩賜。對這些人來說，聖靈的職事似乎由始至終只是關乎如何運用恩賜——講道、教導、說預言、說方言、醫治等等。他們認為根據新約聖經的教導，恩賜（charismata）是神所賜予的某些能力，尤其是藉著言語、行為和態度，把關乎耶穌基督的真理傳遞開去，彼此激勵，互相服事。他們又認為「……聖靈顯在各人身上……」（林前一二 7），恩賜是藉著行以辨認的，基督徒所表現出來的行為，正顯明瞭神賜予他們什麼能力。因此，他們認為屬靈生命的實質在乎表現，同時假設人愈能表現恩賜，就表示他愈被聖靈充滿。
 *** 總動員事奉
 　　對於這種觀點——或更貼切地稱為心態，我首先要說明一點，就是他所強調的教本身同樣是絕對正確的；這次是強調恩賜的實在，以及運用恩賜的重要。曆世以來，教會以為事奉的恩賜只屬於一小部分基督徒專有（例如好的牧師和其他少數人），因此，他們並不十分注意恩賜這個題目。二十世紀以前，有關屬靈恩賜的全面研究，只有一本英文著作，由清教徒歐文（John Owen）於一六七九至一六八 O 年寫成。近期所強調屬靈恩賜的普遍性，以及神對教會總動員事奉的期望，其實早就應該提出，因為新約聖經對這兩方面的教導是相當清楚和明顯的。這裏引述一些主要經文。
