--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -1,5 +1,7 @@
-#+TITLE:《活在聖靈中 Keep in Step with the Spirit》 巴刻J．I．Packer著 /霍玉蓮譯
-#+AUTHOR: 巴刻J．I．Packer著 /霍玉蓮譯
+#+TITLE:《活在聖靈中》
+#+TEXT:《Keep in Step with the Spirit》
+#+TEXT:巴刻J．I．Packer著 /霍玉蓮譯
+#+AUTHOR:巴刻J．I．Packer著 /霍玉蓮譯
 
 * 目錄
  - [[#1_看清楚聖靈][1_看清楚聖靈]]
