--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -2,7 +2,7 @@
 #+AUTHOR:巴刻J．I．Packer著/霍玉蓮譯
 
 * 1 看清楚聖靈
-** 認識並經歷神[[Keep_in_Step_With_the_Spirit__orig.org#認識並經歷神][本文]]
+** 認識並經歷神[[Keep_in_Step_With_the_Spirit__orig.org#1.2認識並經歷神][本文]]
 *** 摘要
 　　耶穌在世上的時候，門徒追隨他，但他們對屬靈事物的理解常有錯漏，而且經常對耶穌有許多誤解；可是，耶穌能夠超越他們思想上的限制，感動他們、改變他們的生命，純粹是由於他們愛他、信靠他，希望從他身上學習，誠心願意追隨他們心中的亮光去服從他。因此，十二個門徒中有十一個「已經乾淨了」，並且得與其他人一起進入耶穌平安的恩典中，而那時他們尚未能掌握耶穌釘十架的贖罪意義。神首先賜下救恩的禮物，改變他們的生命，其後他們才明白這是什麼一回事。
 
