--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -3,16 +3,16 @@
 
 * 目錄
  - [[#1_看清楚聖靈][1_看清楚聖靈]]
-   - [[#蒙眼症][蒙眼症]]
-   - [[#認識並經歷神][認識並經歷神]]
-   - [[#聖靈的能力][聖靈的能力]]
-     - [[#基督徒的能力][基督徒的能力]]
-     - [[#能力的限制][能力的限制]]
-   - [[#表現_屬靈恩賜的運用][表現_屬靈恩賜的運用]]
-     - [[#總動員事奉][總動員事奉]]
+   - [[#1.1蒙眼症][蒙眼症]]
+   - [[#1.2認識並經歷神][認識並經歷神]]
+   - [[#1.3聖靈的能力][聖靈的能力]]
+     - [[#1.3.1基督徒的能力][基督徒的能力]]
+     - [[#1.3.2能力的限制][能力的限制]]
+   - [[#1.4表現_屬靈恩賜的運用][表現_屬靈恩賜的運用]]
+     - [[#1.4.1總動員事奉][總動員事奉]]
 
 * 1_看清楚聖靈
-** 蒙眼症
+** 1.1蒙眼症
 　　市面上不是已經有許多關於聖靈的著作嗎？為什麼還要多添一本？這個問題問得正好，現在我要回答這個問題，就先從我的近視說起吧！
 
 　　如果我除下眼鏡來看你，你在我眼中便蒙朧不清，我應該仍然知道你的存在，我大約仍可分辨你是男是女，我也許不至糊塗得把你撞個滿懷。但在我眼中，你的線條不是清晰可辨，你的容貌變得模糊不清（除了靠記憶外），我絕對無法清楚形容你。假使在我除下眼鏡時，一個陌生人走進我的房間，無疑我可以指出他來，但他的臉孔將會是模糊的一團，我無法知道他臉上的表情。我若不戴回眼鏡，你和他都會輪廓不明。
@@ -21,7 +21,7 @@
 
 　　好了，我現在要清楚指出我寫這些篇章的目的。正如我已經說過，今天聖靈大受注目，眾人所關注的，是他的身分，以及他在個人、教會及社群中做些什麼工作。團契、肢體生活。總動員事奉、聖靈的洗、恩賜、神的引導、預言、神跡，以及聖靈的啟示、更新和復興工作等題目，都常常掛在許多人的嘴邊，也在許多書本中討論過。這誠然是好的，我們應該為此感到快樂；反之，若然我們沒有討論這些題目，可能反映出我們在屬靈方面出了問題。然而正如近視漢看不清眼前的景物一樣，又好比任何人都會在一些事情上捉錯用神，對事物的真相只知其一，不知其二，因此，我們雖然經常頌揚聖靈的工作，但往往未能按聖經認識聖靈。對屬靈的事物，我們真個是濛濛眼，大受自己的偏見左右，以致我們沒法看得清楚。
 
-** 認識並經歷神
+** 1.2認識並經歷神
 　　我們很容易作出如此的假定：既然我們認識聖靈在我們生命中的一些作為，我們就已經完全認識聖靈。很抱歉，結論並不是這樣。事實上，正如一個人的概念知識可以遠超過他的屬靈經驗，同樣，屬靈經驗也可以走在概念知識的前頭。相信聖經的人經常強調需要有正確的概念知識，以致他們忽略了上述的情形。但事實確是如此，耶穌門徒的經驗就是很好的例子。耶穌在世上的時候，門徒追隨他，但他們對屬靈事物的理解常有錯漏，而且經常對耶穌有許多誤解；可是，耶穌能夠超越他們思想上的限制，感動他們、改變他們的生命，純粹是由於他們愛他、信靠他，希望從他身上學習，誠心願意追隨他們心中的亮光去服從他。因此，十二個門徒中有十一個「已經乾淨了」（意思是他們的罪得赦免，心靈獲得更新「約一五 3」），並且得與其他人一起進入耶穌恕宥和平安的恩典中（參路五 20 一 24，七 47—50，一九 5 一 10），而那時他們尚未能掌握耶穌釘十架的贖罪意義。神首先賜下救恩的禮物，改變他們的生命，其後他們才明白這是什麼一回事。
 
 　　同時，當這些人對神充滿信心，並願意敞開心靈去明自神的旨意時，他們便追求更完全活在聖靈裏的生命。（這是極其自然的！難道我們不曉得追求從聖靈而來的生命和追求從耶穌而來的生命，事實上是同一回事，只是名目不同而已？）我在這裏提出的，就是要著意尋求聖經教導我們去尋求的東西。既然神是言而有信的，我們便有把握期望我們所求的必然得著——我們更會發現臨到我們身上的美好恩賜，常是超過我們所想求的。主耶穌說：「你們祈求，就給你們；……你們……尚且知道拿好東西給兒女況天父，豈不更將聖靈給求他的人嗎？」（路—— 9、13）許多曾這樣祈求的人，都被神豐足的回應嚇了一跳。
@@ -36,7 +36,7 @@
 
 　　我想指出的，就是今天很多人殷殷暢論聖靈的工作及活在聖靈中的真實經歷，但其中一些觀念比對於事實真相，就差不多像我對「大將軍」一名先入為主的臆測一樣。請跟我察看一些有關觀念，讓我表明我說的到底是什麼意思吧！
 
-** 聖靈的能力
+** 1.3聖靈的能力
 　　首先，許多人認為聖靈的教義基本上與能力有關，意思是神賜予能力，讓你可以做你應該做卻感有心無力的事情，例如：拒絕物欲的追求（諸如美色、煙、酒、毒品、金錢、刺激、奢華的生活、晉升機會、權力、名望、諂媚奉承等等）。容忍那考驗你耐性的人、愛那不可愛的人、控制脾氣、在壓力中站立得穩、為基督勇敢發言、在遭逢患難中仍信靠神。聖靈賦予人能力達致上述的種種表現，無論在思想上、言語上、講章及禱告裏，這主題都為人所津津樂道。
 
 　　然則我們對這些人所強調的有什麼異議嗎？他們的觀點是否錯誤？不是，絕對不是；情形剛好相反，這觀念本身是堂而皇之的正確。因為能力（power）一詞（通常相當於希臘文的 dunamis，由此引伸為英文的 dynamite，有時相當於 kratos 和 ischus）是一個重要的新約辭彙，而基督藉聖靈賦予信徒能力，確是新約中重大的事實，是福音裏的榮耀，也是世界各地忠實追隨基督的人的標記。如果你對我這番話產生疑問，你大可細讀以下
@@ -50,7 +50,7 @@
 
 　　我們是被召去戰勝那惡者，他常以種種形態出現在我們心裏，或圍繞我們。我們需要知道在這一場爭戰裏，只有靠著聖靈的能力，才能獲取勝利；反之，若完全靠賴自己，最後只會發現自己的無能和經驗挫敗，引致痛苦。所以，福音信仰強調藉著聖靈而達致成聖是一件真實而又必需的事，這個教導永遠都切合時宜。
 
-*** 基督徒的能力
+*** 1.3.1基督徒的能力
 　　十七世紀時期，清教徒首先強調聖靈如何在人的生命中彰顯能力；可是，到了十八世紀，這種教導竟變成了福音派信徒間爭辯的主題，當時衛斯理（ John Wesley）開始提出一種教義，說聖靈會把人的罪從人心靈中連根拔起。這就是衛斯理所指的「合乎聖經的聖潔」，他相信神興起循道主義（Methodism）去宣揚這個教導。非衛理公會信徒對這種教訓退避踟躕，覺得他很虛妄，而且不合乎聖經，所以他們不斷警告自己教會的會友要防備這種思想。然而到了十九世紀中葉，反對的鐘擺搖晃到了另一個極端；許多人感到（不論他們的想法是否正確）這股反完全主義的熱潮令基督徒完全遺忘了神有能力拯救人脫離罪，他能使人過一個平靜、得勝而公義的生活，他亦能夠使講員的資訊直透人心靈深處。忽然之間，人得勝的能力頓成為講章、書籍和非正式小組討論的話題（他們稱這些小組討論為「閒談聚會」），遍及大西洋兩岸。龐馬（Phoebe Palmer）、馬漢（Asa Mahan）、史密夫（ RobertPearsall Smith）、漢娜·韋杜（ Hannah Whitall Smith）、賀堅斯（ Evan Hopkins）、慕安德列（ Andrew Murray）。叨雷（R．A．Torrey）、特榮布林（ Charles G．Trumbull）。麥奇堅（ Robert C．McQuilkin）、梅亞（F．B．Meyer）、慕耳（H．C.G．Moule）等人所致力宣告的信徒得力「秘訣」（“secret”，這是他們採用的字眼），被高舉為新的啟示。事實上，宣告這些道理的前們也如此相信。一個嶄新的福音信仰運動已經展開了。
 
 　　這個得力的「秘訣」，有時也稱為「高超生命」或「得勝生活」的秘訣，已經在英倫一年一度為期一周的凱錫克培靈會（Keswick Convention）中，全面制度化地推展了，一如爵士樂隊的主要節目安排一樣，一直以來這個培靈會的各個聚會都有固定編排，星期一的主題是罪惡，星期二的主題是那拯救我們脫離罪惡的基督，星期三是奉獻，星期四是在聖靈裏的生命，星期五是成聖者滿有能力的事奉（尤其是在宣教事工上）。及後，一份凱錫克期刊在一八七四年創刊，名為《基督徒得力之途》（The Christian Pathway of Power）。五年後，刊物名稱改為《信心的生命》（The Life of Faith)，但名稱的改換並不代表期刊的性質有任何更改，仍依據凱錫克培靈會的教導，以信心就是得力之途為主題。凱錫克塔靈會的影響是世界性的，「凱錫克信徒。勃興於全世界所有以英語為地方語言的角落。「凱錫克培靈會的教導已經被視為近期教會歷史中一股最有潛力的屬靈力量。」1「凱錫克型」的講員，專門在大會上宣講能力的資訊，他們已成為一群獨特的福音信仰牧者，與福音信仰學者、聖經教師和講論預言性主題的講員並駕齊驅。凱錫克資訊經過制度化，又獲得欣賞凱錫克精神（平穩、愉快、節制、吹毛求疵等特性都非常迎合中產階級人士的喜好）的人支持；所以，凱錫克培靈會中有關成聖和事奉能力的資訊自然縈繞人心。
@@ -59,17 +59,17 @@
 
 　　既然神應允和賜予能力是千真萬確的事，那麼能力的主題如此受到重視，誠然是一件值得欣喜的事。事實上，強調能力的資訊不管透過什麼形式表達出來，今天已成為基督教福音信仰主流的標記，與世界性的靈恩運動並駕齊驅；這無疑是一個對未來充滿希望的徵兆。
 
-*** 能力的限制
+*** 1.3.2能力的限制
 　　然而，在慶倖今天有許多關乎能力的講論之餘，我們也不無憂慮；因為經驗告訴我們，當我們思想聖靈時，若只集中注意能力這個主題，而沒有一個更具深度的觀點，沒有從另一個中心主題去看聖靈的職事，那麼，扭曲的觀念很快就悄悄潛入我們的思想裏。什麼是扭曲了的觀念呢？好，讓我拿以下的例子來開始吧！當一個人經常尋求力量去駕馭生活上的大小事情時，他會虔誠地專注自己心靈的起伏，因而產生一種自我中心和內向的心態，以致對社群的福利和社會的需要漠不關心。當人論及聖靈的工作時，往往傾向於以人為中心，就好像神的能力是一些隨時儲備妥當的東西，只要運用思想和意志——通常美其名為奉獻和信心——就可以開關「使用」（這是凱錫克培靈會的常用語）同時，這種態度形成一種觀念，認為只要我們肯釋放自己內在的能力，神的能力就會在我們心裏自動地運行，因此，我們可以隨時按著自己奉獻和信心的程度來調節這種能力。另一個隨之浮現的觀念，就是以為必須處於內在的被動狀態中，完全等候神的能力帶領我們（「放下自己，讓神工作」是流行得太響的口號）。同樣，在某些圈子的佈道工作裏，差不多形成了一種慣例，就是為心靈空虛的人提供一種「生活的力量」。表面上，就好像只要人肯委身基督，他立刻可以獲得發動和操縱能源的權利。
 
 　　可是，這一切聽起來似乎較像瑜珈，甚於以聖經真理為基礎的基督教信仰。首先，這些觀念混淆了憑己意去擺佈神的能力（這是法術，西門的表現就是一個例子「徒八 18-24）和因著順服神的旨意而經歷神的能力（這是宗教，保羅的表現就是很好的例子「林後一二 9、10」）。再者，這些觀念是不切實際的。佈道家們的講章經常暗示一件事實，就是我們一旦成為基督徒，神在我們裏面的能力就可以立時除去我們性格上的任何弱點，令我們生活一帆風順；可是，這種說法是違背聖經，甚至是不誠實的。當然，神有時候可以施行奇跡，令悔改的人忽然改變過來，從這些或那些弱點中得釋放，即如其他時候，他亦會偶然施行神跡奇事一樣；然而，每個基督徒的生命都是一場持久戰，要不斷對抗來自世界、肉體和魔鬼的種種試誘和壓力；同時，那追求活像基督（即是智慧、忠心、愛心和公義的生活）的爭戰是嚴苛的，是永不停息的。在佈道中宣揚相反的現實，就無寧是一種騙取信心的技倆。同樣，凱錫克培靈會中的講論，經常鼓勵我們一時間對自己有過高及過低的期望——每時每刻完全脫離罪的纏累，是期望過高；另一方面，沒有動機去期望能夠逐步擺脫罪對我們心靈的轄制，就是期望過低。這是一種拙劣的神學，而且在心理和精神上都不符現實。我這些意見若早在一九五五年發表，一定會犯眾怒了，但在今天，我相信這些見解會較普遍受到接納。
 
 　　討論下去，你就會漸漸明白我們真正的問題是需要對聖靈的教義有深刻而真確的洞見——這洞見的亮光能促使我們糾正對內在能力的謬說。不過，我打算暫且擱下這部分的論據，待我完成對聖靈問題的初步探討後才再談他。在目前的探討裏，我們只要記著一點，就是只談聖靈能力，根本不能針對問題的核心。
 
-** 表現_屬靈恩賜的運用
+** 1.4表現_屬靈恩賜的運用
 　　其次，許多人認為聖靈的教義基本上與表現有關，意思是運用屬靈恩賜。對這些人來說，聖靈的職事似乎由始至終只是關乎如何運用恩賜——講道、教導、說預言、說方言、醫治等等。他們認為根據新約聖經的教導，恩賜（charismata）是神所賜予的某些能力，尤其是藉著言語、行為和態度，把關乎耶穌基督的真理傳遞開去，彼此激勵，互相服事。他們又認為「……聖靈顯在各人身上……」（林前一二 7），恩賜是藉著行以辨認的，基督徒所表現出來的行為，正顯明瞭神賜予他們什麼能力。因此，他們認為屬靈生命的實質在乎表現，同時假設人愈能表現恩賜，就表示他愈被聖靈充滿。
 
-*** 總動員事奉
+*** 1.4.1總動員事奉
 　　對於這種觀點——或更貼切地稱為心態，我首先要說明一點，就是他所強調的教本身同樣是絕對正確的；這次是強調恩賜的實在，以及運用恩賜的重要。曆世以來，教會以為事奉的恩賜只屬於一小部分基督徒專有（例如好的牧師和其他少數人），因此，他們並不十分注意恩賜這個題目。二十世紀以前，有關屬靈恩賜的全面研究，只有一本英文著作，由清教徒歐文（John Owen）於一六七九至一六八 O 年寫成。近期所強調屬靈恩賜的普遍性，以及神對教會總動員事奉的期望，其實早就應該提出，因為新約聖經對這兩方面的教導是相當清楚和明顯的。這裏引述一些主要經文。
 
 　　「恩賜『charisznata』原有分別，聖靈卻是一位。職事『diakonia』也有分別，主卻是一位。功用『energemata』也有分別，神卻是一位，在眾人裏面運行一切的事。」（林前一二 4 一 6）「我們各人蒙恩，都是照基督所量給各人的恩賜……凡事長進，于元首基督；全身……照著各體的功用彼此相助，便叫身體漸漸增長，在愛中建立自己。」（弗四 7、15、16）「各人要照所得的恩賜彼此服事，作神百般恩賜的好管家。」（彼前四 10）「正如我們一個身子上有好些肢體，肢體也不都是一樣的用處。我們這許多人，在基督裏成為一身，互相聯絡作肢體，也是如此。按我們所得的恩賜，各有不同。……」（羅一二 4—6）並非只有聖品人員及有職分的才具有恩賜，所有基督徒 都具有恩賜，牧者必須認識這個事實，並運用自己的恩賜去裝備平信徒運用他們的恩賜。「他所賜的，有使徒，有先知，有傳福音的，有牧師和教師；為要成全聖徒，各盡其識，建立基督的身體」（弗四 11、12）。
