--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -1,6 +1,16 @@
 #+TITLE:《活在聖靈中 Keep in Step with the Spirit》巴刻(J．I．Packer)著/霍玉蓮譯
 #+AUTHOR:巴刻J．I．Packer著/霍玉蓮譯
 
+* 目錄
+ - [[#1_看清楚聖靈][1_看清楚聖靈]]
+   - [[#蒙眼症][蒙眼症]]
+   - [[#認識並經歷神][認識並經歷神]]
+   - [[#聖靈的能力][聖靈的能力]]
+     - [[#基督徒的能力][基督徒的能力]]
+     - [[#能力的限制][能力的限制]]
+   - [[#表現_屬靈恩賜的運用][表現_屬靈恩賜的運用]]
+     - [[#總動員事奉][總動員事奉]]
+
 * 1_看清楚聖靈
 ** 蒙眼症
 　　市面上不是已經有許多關於聖靈的著作嗎？為什麼還要多添一本？這個問題問得正好，現在我要回答這個問題，就先從我的近視說起吧！
@@ -11,7 +21,7 @@
 
 　　好了，我現在要清楚指出我寫這些篇章的目的。正如我已經說過，今天聖靈大受注目，眾人所關注的，是他的身分，以及他在個人、教會及社群中做些什麼工作。團契、肢體生活。總動員事奉、聖靈的洗、恩賜、神的引導、預言、神跡，以及聖靈的啟示、更新和復興工作等題目，都常常掛在許多人的嘴邊，也在許多書本中討論過。這誠然是好的，我們應該為此感到快樂；反之，若然我們沒有討論這些題目，可能反映出我們在屬靈方面出了問題。然而正如近視漢看不清眼前的景物一樣，又好比任何人都會在一些事情上捉錯用神，對事物的真相只知其一，不知其二，因此，我們雖然經常頌揚聖靈的工作，但往往未能按聖經認識聖靈。對屬靈的事物，我們真個是濛濛眼，大受自己的偏見左右，以致我們沒法看得清楚。
 
-** 1.2
+** 認識並經歷神
 　　我們很容易作出如此的假定：既然我們認識聖靈在我們生命中的一些作為，我們就已經完全認識聖靈。很抱歉，結論並不是這樣。事實上，正如一個人的概念知識可以遠超過他的屬靈經驗，同樣，屬靈經驗也可以走在概念知識的前頭。相信聖經的人經常強調需要有正確的概念知識，以致他們忽略了上述的情形。但事實確是如此，耶穌門徒的經驗就是很好的例子。耶穌在世上的時候，門徒追隨他，但他們對屬靈事物的理解常有錯漏，而且經常對耶穌有許多誤解；可是，耶穌能夠超越他們思想上的限制，感動他們、改變他們的生命，純粹是由於他們愛他、信靠他，希望從他身上學習，誠心願意追隨他們心中的亮光去服從他。因此，十二個門徒中有十一個「已經乾淨了」（意思是他們的罪得赦免，心靈獲得更新「約一五 3」），並且得與其他人一起進入耶穌恕宥和平安的恩典中（參路五 20 一 24，七 47—50，一九 5 一 10），而那時他們尚未能掌握耶穌釘十架的贖罪意義。神首先賜下救恩的禮物，改變他們的生命，其後他們才明白這是什麼一回事。
 
 　　同時，當這些人對神充滿信心，並願意敞開心靈去明自神的旨意時，他們便追求更完全活在聖靈裏的生命。（這是極其自然的！難道我們不曉得追求從聖靈而來的生命和追求從耶穌而來的生命，事實上是同一回事，只是名目不同而已？）我在這裏提出的，就是要著意尋求聖經教導我們去尋求的東西。既然神是言而有信的，我們便有把握期望我們所求的必然得著——我們更會發現臨到我們身上的美好恩賜，常是超過我們所想求的。主耶穌說：「你們祈求，就給你們；……你們……尚且知道拿好東西給兒女況天父，豈不更將聖靈給求他的人嗎？」（路—— 9、13）許多曾這樣祈求的人，都被神豐足的回應嚇了一跳。
