--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -9,6 +9,7 @@
      - [[#基督徒的能力][基督徒的能力]]
      - [[#能力的限制][能力的限制]]
    - [[#表現_屬靈恩賜的運用][表現_屬靈恩賜的運用]]
+     - [[#總動員事奉][總動員事奉]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -52,15 +53,14 @@
 [[Keep_in_Step_With_the_Spirit__orig.org#能力的限制][本文]]
 
 ** 表現_屬靈恩賜的運用
-　　其次，許多人認為聖靈的教義基本上與表現有關，意思是運用屬靈恩賜。對這些人來說，聖靈的職事似乎由始至終只是關乎如何運用恩賜——講道、教導、說預言、說方言、醫治等等。他們認為根據新約聖經的教導，恩賜（charismata）是神所賜予的某些能力，尤其是藉著言語、行為和態度，把關乎耶穌基督的真理傳遞開去，彼此激勵，互相服事。他們又認為「……聖靈顯在各人身上……」（林前一二 7），恩賜是藉著行以辨認的，基督徒所表現出來的行為，正顯明瞭神賜予他們什麼能力。因此，他們認為屬靈生命的實質在乎表現，同時假設人愈能表現恩賜，就表示他愈被聖靈充滿。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#表現_屬靈恩賜的運用][本文]]
 
 *** 總動員事奉
-　　許多人認為聖靈的教義基本上與表現有關，意思是運用屬靈恩賜。對這些人來說，聖靈的職事似乎由始至終只是關乎如何運用恩賜——講道、教導、說預言、說方言、醫治等等。他們認為根據新約聖經的教導，恩賜（charismata）是神所賜予的某些能力，尤其是藉著言語、行為和態度，把關乎耶穌基督的真理傳遞開去，彼此激勵，互相服事。他們又認為恩賜是藉著行以辨認的，基督徒所表現出來的行為，正顯明瞭神賜予他們什麼能力。因此，他們認為屬靈生命的實質在乎表現，同時假設人愈能表現恩賜，就表示他愈被聖靈充滿。
+　　許多人認為聖靈的教義基本上與表現有關，意思是運用屬靈恩賜。對這些人來說，聖靈的職事似乎由始至終只是關乎如何運用恩賜——講道、教導、說預言、說方言、醫治等等。他們認為根據新約聖經的教導，恩賜（charismata）是神所賜予的某些能力，尤其是藉著言語、行為和態度，把關乎耶穌基督的真理傳遞開去，彼此激勵，互相服事。他們又認為恩賜是藉著行為以辨認的，基督徒所表現出來的行為，正顯明神賜予他們什麼能力。因此，他們認為屬靈生命的實質在乎表現，同時假設人愈能表現恩賜，就表示他愈被聖靈充滿。
 
-對於這種觀點，我首先要說明一點，就是他所強調的教導本身同樣是絕對正確的；這次是強調恩賜的實在，以及運用恩賜的重要。強調屬靈恩賜的普遍性，以及神對教會總動員事奉的期望，新約聖經對這兩方面的教導是相當清楚和明顯的。並非只有聖品人員及有職分的才具有恩賜，所有基督徒都具有恩賜，牧者必須認識這個事實，並運用自己的恩賜去裝備平信徒運用他們的恩賜。
+　　對於這種觀點，我首先要說明一點，就是他所強調的教導本身同樣是絕對正確的；這次是強調恩賜的實在，以及運用恩賜的重要。強調屬靈恩賜的普遍性，以及神對教會總動員事奉的期望，新約聖經對這兩方面的教導是相當清楚和明顯的。並非只有聖品人員及有職分的才具有恩賜，所有基督徒都具有恩賜，牧者必須認識這個事實，並運用自己的恩賜去裝備平信徒運用他們的恩賜。
 
-近年來普世教聯運動和靈恩運動都抓緊這方面的聖經真理，使之漸漸成為基督教的老生常談，因而產生了一些可喜的效果。讓信徒有機會完全發揮他們的恩賜，令會眾整體受益；隨之興起的，是以一種認真的態度，去檢討傳統的崇拜程式和形式，以保障沒有任何恩賜受到窒礙，甚至銷滅聖靈的感動。這一切都是好現象。
+　　近年來普世教聯運動和靈恩運動都抓緊這方面的聖經真理，使之漸漸成為基督教的老生常談，因而產生了一些可喜的效果。讓信徒有機會完全發揮他們的恩賜，令會眾整體受益；隨之興起的，是以一種認真的態度，去檢討傳統的崇拜程式和形式，以保障沒有任何恩賜受到窒礙，甚至銷滅聖靈的感動。這一切都是好現象。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#總動員事奉][本文]]
