--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -10,6 +10,9 @@
      - [[#能力的限制][能力的限制]]
    - [[#表現_屬靈恩賜的運用][表現_屬靈恩賜的運用]]
      - [[#總動員事奉][總動員事奉]]
+     - [[#正確地看表現][正確地看表現]]
+   - [[#保守我們純潔][保守我們純潔]]
+     - [[#道德掙紮教義的陷阱][道德掙紮教義的陷阱]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -77,3 +80,57 @@
 　　英文聖經的敘定譯本（King James Version）掩蓋了保羅在此處的含義，把他翻譯為基督所賜的有使徒、先知、傳福音的、牧師和教師，「為了成全聖徒，為要各盡其職，為要建立基督的身體」（“for　the　perfecting　of　the　saints，for thework of ministry， for the edifying of the Body of Christ”［King James Version］）。乍看來，這三句平衡的句語好像都是聖品人員蒙召的職責。第六世紀的聖經版本遺漏了第七條誡命中的不字（出二○14），在歷史中流傳下來，被稱為邪惡的聖經版本；這裏英文聖經欽定譯本在「聖徒」（“saints”）之後加上了一個逗點，也同樣產生不良的效果。因為這個逗號將「職事」的範圍局限了，成為只有在位的領袖才可擔當，這不但隱藏了保羅的意思，簡直將保羅的意思顛倒過來，使本來是肢體各盡其職的成為教權主義（clericalism）。（這裏的「教權主義。是一種陰謀和專橫的結合，在其中，牧者宣稱所有屬靈職事都是他個人的責任，不是會眾的責任，而會眾亦同意這種想法。這個觀念在原則上很有問題，實踐起來更會導致聖靈的感動被銷滅。）
 
 　　其實，自上個世紀中葉開始，普利茅斯弟兄會（ Plymouth Brethren）已宣告恩賜的普及性和肢體應各盡其職，但由於他們的宣告摻雜在一種反動性的爭論裏——當時的論，是針對一些在被指為背離真道的教會裏事奉、受薪並曾受訓練的聖品人員——，們的宣告沒有受到多大注意。可是，近年來普世教聯運動和靈恩運動都抓緊這方面的聖經真理，使之漸漸成為基督教的老生常談，因而產生了一些可喜的效果。其中一個效果，就是許多地區的教會紛紛願意在教會生活中實驗新的制度及新的禮儀形式，讓信徒有機會完全發揮他們的恩賜，令會眾整體受益；隨之興起的，是以一種認真的態度，去檢討傳統的崇拜程式和形式，以保障沒有任何恩賜受到窒礙，甚至銷滅聖靈的感動。這一切都是好現象。
+
+*** 正確地看表現
+　　很不幸，這可喜情況也有其負面：三大扭曲了的現象不時破壞我們認識聖靈的新取向。
+　　第—，過分強調平信徒的職事，令一些平信徒低估和輕視牧師的特殊責任，忘記要尊重牧者的職分和領導。
+　　第二，著重指出神慣於賜予聖徒一些與他們信主前的才能毫不相關的恩賜（這強調沒有錯，這的而且確是神的習慣）致使一些人受到蒙蔽，而看不見另一個事實，就是教會生活中最重要的恩賜（如講道、教導、領導、輔導、支持）通常是一些被聖化了的天然才能。
+　　第三，有些人鼓勵基督徒在個人表現上有極度的自由，因此為了平衡這種極端，他們設立了各種極度專制的牧養監察形式，有時甚至比起中世紀教士運用權術控制基督徒良心的種種惡劣方式，有過之而無不及。
+
+　　明顯地，上述發展都有毛病，但糾正這些毛病不等於要貶低他們背後的原則；這些毛病不過是一些不受歡迎的副產品。原則本身是正確的，若不能切實遵守這些原則，就不可能有高質素的教會生活。
+
+　　話說回來，若我們單單專注恩賜的彰顯（例如以說方言為個人的五旬節經驗），以為這就是聖靈對個別信徒的主要職事，因而認為這就是我們應該集中關注的聖靈工作，那就大錯特錯了。只要讀讀哥林多前書，這個錯誤就顯而易見。哥林多教會的信徒因擁有知識而自高自大（八 1、2），他們為自己的恩賜自鳴得意，或者有些人會說，是雄心勃勃。他們藐視一些會友及外來講員，認為這些人的恩賜不及他們；每當他們在教會裏聚會，彼此之間就喜歡競爭和炫耀自己的恩賜。保羅為哥林多教會的信徒知識全備、滿有恩賜而感到十分高興（一 4—7）；但另一方面，保羅指出他們像嬰孩一樣不成熟，又屬乎肉體，行事為人自相矛盾，自招羞愧（三 l—4，五 1 一 13，六 1 一 8，—一 17  22）。他們重視恩賜和自由過於公義、愛心和事奉；保羅說這樣的價值觀是錯誤的。再沒有別的教會像哥林多教會一樣受到使徒這麼多的指責了。
+
+　　哥林多信徒因著自己的知識和恩賜，以為自己是「屬靈的」（Pneumatikoi，一四37）；可是，保羅苦苦的向他們指出，真正屬靈的質素（假定聖靈已賜予我們悟性去瞭解福音，因為這是最基本的屬靈條件）是屬乎道德的。「豈不知你們的身子就是聖靈的殿嗎？這聖靈是從神而來，住在你們裏頭的；並且你們不是自己的人，因為你們是重價買來的。所以要在你們的身子上榮耀神。」（六 19、 20）那遠勝哥林多信徒一切最可誇表現的「更妙之道」，就是愛：「……恒久忍耐，又有恩慈……不嫉妒……不，不 張狂，不作害羞的事，不求自己的益處，不輕易發怒，不計算人的惡，不喜歡不義，只喜歡真理；凡事包容，凡事相信，凡事盼望，凡事忍耐。」（一三 4 一 7）保羅說，儘管你擁有世界上各樣最偉大的恩賜，然而沒有愛，你就算不得什麼（一三 1—3）——靈性上是死的。保羅懷疑哥林多教會的一些人事實上「算不得什麼」，因此，他寫信給他們說：「你們要醒悟為善，不要犯罪，因為有人不認識神。我說這話是要叫你們羞愧。」（一五 34；另參林後一三 5）
+
+　　有一件事情是哥林多信徒需要瞭解的，也是今天我們一些信徒需要重新學習的，這就是清教徒歐文（ John Owen）所說的，有些人可以滿有恩賜卻完全沒有領受恩典，意思是一個人可以有很好的表現，使他人靈性得益，但他本人卻沒有因著真正認識神，經歷聖靈在他心內動工所帶來的內在更新。彰顯聖靈的恩賜表現，與聖靈所結的果子，即活像基督的品德（見加五 22、23）完全是兩回事；一個人可以在恩賜的表現上有驕人成績，卻欠缺像基督的美德。你可以有許多恩賜，但只有少許恩典；你甚至可以有真實的恩賜，但完全沒有真實的恩典；就如巴蘭、掃羅和猶大一樣。歐文寫道，這是由於：
+
+　　屬靈恩賜只屬於頭腦上或理解上的，不管是普通恩賜或特殊恩賜，都不能在心靈裏占一席位。屬靈恩賜是頭腦上的，因為他們是觀念性和理論性，多於實際的。他們只是智慧而已。縱使有些恩賜，諸如行神跡和說方言，能夠在我們裏面找到住處，卻不過是一種特殊力量的「短暫運作」，曇花一現。神的亮光是所有其他恩賜的基礎，屬靈光照是恩賜的實質；所以使徒在希伯來書六章四節中表達出恩賜的次序［歐文將「來世權能」等同於屬靈恩賜」。意志、情感和良心都與這些恩賜無關，因此，這些恩賜無法改變心靈；固然，若憑著光照的功效，也許可以改革生命。雖然一般來說，神不會將恩賜賜予大奸大惡的罪犯，至於那些接受了恩賜的人，若果後來變得惡行昭彰，神多半不會繼續給他們賜下恩賜；然而，一些擁有恩賜的人可能生命從未真正更新，那就無法確保他們不會陷入嚴重的罪中。3
+
+　　故此，沒有人可以用恩賜作為取悅神或得救的明證，屬靈恩賜並不等於這些。
+
+　　在整本新約聖經裏，每逢提及神在人生命中的工作，著眼點往往是倫理道德，而不是靈恩方面的。那真正要緊的是活像基督（不是在恩賜上像基督，而是在愛心、謙卑、順服神的旨意、對別人的需要敏感等各方面像他）。這在保羅為信徒的禱告中表達得尤其清楚。他為哥羅西的信徒祈求，求神「照他榮耀的權能，［使信徒］得以在各樣的力上加力，好叫……。什麼？是透過豐盛有餘的恩賜，好叫他們在事奉上有輝煌的成就嗎？不是，而是好叫他們「凡事歡歡喜喜的忍耐寬容」（西一 11）。同時，他祈求腓立比信徒的愛心滿溢，「……在知識和各樣見識上，多而又多；使你們……。什麼？使你們在講道和爭辯中充滿說服力，或者有醫治的權柄，或者能說流利的方言嗎？不是，而是「作誠實無過的人，直到基督的日子；並靠著耶穌基督結滿了仁義的果子……」（腓 9—11；另參看弗三 14 一 19）。
+
+　　以上這點不單切合那些終日埋首於發掘和使用屬靈恩賜的人，也適用於所有持以下態度的人：這些人也許受自己剛烈的性情所矇騙，總以他們參與基督教活動的多寡，以及推行活動的技巧和成敗來量度聖靈在他們身上的工作。
+
+　　我的論點就是任何把屬靈恩賜（奔走和辦事的能力和意願）看為比屬靈果子（在個人生命中像基督的品格）更重要的心態，在屬靈上都是方向錯誤的，需要矯正。最佳的矯正良藥就是重新調校我們對聖靈工作的觀點，把基督徒的活動和表現看為服事神和榮耀神的途徑，並按這種價值去衡量他們，而不是憑我們的觀感，單單因為某些活動或表現充滿戲劇性、夠搶眼、足以吸引人、能讓人在教會中擔當重要職位，或者使我們對某人的期望提升，就看為寶貴。有關這方面的觀點，我將會在下文討論；目前，讓我們先弄清楚，強調恩賜和活動，跟強調經驗聖靈的能力一樣，都不能領我們進到聖靈真理的核心。讓我們繼續我們的檢討。
+
+** 保守我們純潔
+
+　　第三方面，有些人將聖靈的教義集中在「潔淨」（purifying）和「淨化」（purgation）之上，換句話說，就是神潔淨他的兒女，使他們脫離罪的污染和敗壞，幫助他們抵擋試探，行正義的事。對於這些人來說，聖靈在我們逐漸成聖的過程中，使我們趨向完全，幫助治死我們裏面的罪（羅八 14；另參看西三 5），並改變我們，叫我們「榮上加榮……」（林後三 18）。對他們來說，問題的核心並非經歷聖靈的能力，也在乎基督徒對外的表現，反而是我們內心的爭戰，在追求聖潔的過程中如何對抗罪惡，尋求聖靈的幫助，保守我們純潔，不受玷污。
+
+　　這些人所強調的觀點，本身也是完全合乎聖經的。未曾重生的人，實際上如保羅所說，「……都在罪惡之下……」（羅三 9）；另一方面，罪仍然「住」在那些重生了的人裏面（羅七 20、23；另參看來一二 1；約壹一 8）。罪在本質上就是一種叛逆神的非理性能量——一種傲慢、任性的習慣，在道德及屬靈上形形色色的自我中心表現。無論罪以任何形式出現，都惹神憎厭（賽六一 8；耶四四 4；箴六 16 一 19），也使我們在神的眼裏成為不潔之民。所以，從聖經來看，罪不單需要被赦免，而且需要被潔淨。
+
+　　同樣地，以賽亞盼望有一天「主以公義的靈和焚燒的靈，將錫安女子的汙穢洗去」（賽四 4；另參看要求人洗濯、自潔的經文：賽一 16；耶四 14）。以西結覆述神的話：「我必用清水灑在你們身上，你們就潔淨了。我要潔淨你們，使你們脫離一切的汙穢，棄掉一切的偶像。」（結三六 25）撒迦利亞預告：「那日，必給大衛家和耶路撒冷的居民，開一個泉源，洗除罪惡與汙穢。」（亞一三 1）瑪拉基發出警告說：神「如煉金之人的火，如漂布之人的鹺。他必坐下如煉淨銀子的，必潔淨利未人，熬煉他們像金銀一樣……」（瑪三 2、3；另參看賽一 25；亞一三 9）這些經文指出犯罪行為使我們在神面前成為汙穢；罪惡叫神討厭和反感，一如當我們發現本該是潔淨的地方變成汙穢時，我們自己也表示討厭和反感；但在神恩慈的聖潔裏，這一切都解決了，他不單赦免我們的罪，而且幫助我們不再犯罪。
+
+　　在舊約聖經裏，所有潔淨的律例及潔淨的禮儀都指向這種神聖的潔淨工作。同樣，在新約聖經所有有關救贖的經文裏，都把救恩形容為被洗淨和被潔淨（約一三 10，一五3；徒二二 16；林前六 11；弗五 25—27；來九 13、14，一○22；約壹一 7—9），又指基督徒生命中最重要的事情，就是潔淨自己，除去一切使自己在神眼中看為汙穢的東西（林後七 1；弗五 3— 5；提後二 20—22；約壹三 3）。所以，基督徒的洗禮尤其反映些意義，洗禮事實上不折不扣地象徵了潔淨。
+
+　　聖靈使基督徒醒覺到自己的罪汙，並為此感到羞慚，又激勵我們去「……潔淨自己除去身體、靈魂一切的汙穢，敬畏神，得以成聖。」（林後七 1）當我們突出聖靈這方面的工作時，正好顯明瞭聖經一個重點，而在我們這個頹廢的世代裏，一切道德標準不受重視，羞恥之心被視作等閒，這重點實在需要大大的強調。
+
+　　同時，基督徒在現世對純潔生命的追求，意味著他們長遠下去一種自覺的矛盾和掙紮，並常會感到成績未達理想；這方面的著重也是相當正確的，「因為情欲和聖靈相爭，聖靈和情欲相爭，這兩個是彼此相敵，使你們不能作所願意作的。」（加五 17）
+
+　　無論我們是否接受羅馬書七章十四至二十五節作為剖析基督徒經驗的一個橫切面，用以直接闡明上述要點（有些人贊成，有些人不贊成；我們稍後會再作討論），但毫無疑問，保羅在加拉太書正告訴我們基督徒生命裏的實際掙紮。他要我們知道，每個基督徒的生命裏，都存在著兩種敵對的欲望；這兩種力量在動機的層次上彼此為敵。有些欲望表現出人性墮落後一種悖逆神、自私自利的天性；有些欲望表現出由重生而來的超自然、榮耀神和愛神的動機。由於基督徒內心有這兩種敵對的催迫動力，當其中一股動力把他拉向前時，另一股動力便把他拉向後；因此，縱然他恒常的目標是完完全全地服事神，如一首聖詩所說，存著「忠誠專一的心」，他還是發覺他的心靈從未完全純潔無瑕，他所作的事，也並非絕對正確無誤。就這樣，他時時刻刻不能作他所願作的。他在生活中認識到他所作的一切其實可以並且應該做得更好：不單只在他被自己的驕傲、軟弱、愚昧出賣了時如此，他努力嘗試行善為義的時候也是如此。在每一次嘗試之後，在每一個行動之後，他往往看見他在動機上、在表現上，都有許多可以改善之處。他當其時感到已盡所能做到最好的事情，事後回顧都會發現並非做得最好。就這樣，他窮一生之力追求完美，卻又發現他所追求的永遠不能在他掌握之內。
+
+　　當然，這不是說他永不會達到任何程度的義，保羅並非預料基督徒生命是經常完全失敗的，反而，他期望這是不斷的道德成長。「……當順著聖靈而行，就不放縱肉體的情欲了。」這是加拉太書五章十六節對信徒的直接要求，第十七節只不過是這要求的注腳而已。明顯地，保羅在這裏及其他經文教導有關基督徒品行時，他每每期望信徒努力向前，養成聖潔的習慣，積極操練自己，學像基督。
+
+　　保羅說，基督徒既然從罪的奴役中釋放出來，他就可「按著心靈的新樣」（羅七6），實踐愛和公義；凡他現在能實踐的，他都必須去實踐，因為這聖潔的生活是神的旨意（加五 13、 14；羅六 17 至七 6；帖前四 1 一 8）。基督徒能夠且必須藉著聖靈治死他們的罪（羅八 13）；他也能夠且必須活在聖靈裏，走在屬神和善行的道路上（羅八 4；加五 16、25）。意思是說，一些他從前愛做的事，或一般未信主的人愛做的事，他如今放棄不作，而且，他開始選擇作另一些事情。現在，他要追隨自己心靈裏（即在他的意識裏）所感受到屬於聖靈的意願，而不陷溺在肉體的情欲中。基督徒生命必須是公義的生命，這正是他悔改和重生的自然流露，也是基本的要求。
+
+　　談到保羅在第十七節所說的話，我只想發揮這唯一的重點：活在聖靈中的基督徒，會不斷發現他的生命尚未達致本來應有的美善；他經常要面對重重障礙和限制，以及自己扭曲的天性背道而馳的拉扯，他正在打一場前所未有的硬仗；同時，即使是他最好的行為，也不免犯上動機上的罪；他亦發現他每日的生活充滿汙點，他必須每時每刻仰賴神在基督裏的赦罪恩典，否則他就會在罪中失喪；同時，他也認識到自己心靈的軟弱和善變，需要經常求告聖靈賜給他力量，使他在這場內在的鬥爭中能堅持到底。「你確實不能實踐你心想望的那種聖潔生活。」對保羅來說，這句話明顯地道出了人追求聖潔的一些真相。誰可以說他是錯誤的呢？
+　　
+　　的確，自從革利免（Clement）和俄利根（Origen ）提出清除情欲、淨化靈魂的教導，早期教父記述他們如何頑抗醇酒美人、夜夜笙歌的幻想，以及奥古斯丁用自身的經歷去刻畫罪和恩典的本質以來，信徒不可避免地要與試探對抗的主題就成為基督教靈修教導中一個固定的著重累占。馬丁·路德和加爾文對這方面有很多闡釋，路德宗和加爾文派的信徒，尤其是加爾文派，都緊緊追隨他們的腳蹤。許多世紀以來，不少人曾一次又一次地對這個重點的真確性、現實性和健全性提出質疑與辯論，到如今，已經再沒有什麼見解能認真地挑戰上述重點了。藉著神的恩典，人的生命逐漸被洗滌和潔淨，因此，強調人生掙紮的真實性，是完全合乎聖經和十分恰當的。
+
+*** 道德掙紮教義的陷阱
+　　即使這樣，經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們的行事為人愈來愈像法利賽人，注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，對於沒有真正構成威脅的事物，他們亦毫無理由地懼怕受到污染，又頑固地不肯安心；他們變得沒有喜樂，因為盤據他們腦海的，儘是這場屬靈戰爭如何冷酷無情的思想；他們變成病態的人，終日內省，陷溺於懊悔自己心靈的腐朽，久而久之，滋長出灰暗冷漠的人生觀；他們對於道德成長的可能性感到悲觀，不單看自己如此，看別人也是如此；他們對於脫離罪惡，不敢存什麼厚望，最大的希望只不過是不會比以前更糟。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
+
+　　我明白這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，都往往是一些成因；此外，一些內向的教會文化和社群，都可以導致上述的情況。只不過，現在我想指出的，就是對聖靈認識不足，也經常是一個原因。一如我們剛才討論到的其他兩類人一樣，這類人需要從另一個觀點認識聖靈，從上述我所描寫的那種灰暗、自我中心的屬靈狀況中擺脫出來。一會兒，我就會指出什麼是我所認為的正確觀點了。
+　
