--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -77,3 +77,27 @@
 　　英文聖經的敘定譯本（King James Version）掩蓋了保羅在此處的含義，把他翻譯為基督所賜的有使徒、先知、傳福音的、牧師和教師，「為了成全聖徒，為要各盡其職，為要建立基督的身體」（“for　the　perfecting　of　the　saints，for thework of ministry， for the edifying of the Body of Christ”［King James Version］）。乍看來，這三句平衡的句語好像都是聖品人員蒙召的職責。第六世紀的聖經版本遺漏了第七條誡命中的不字（出二○14），在歷史中流傳下來，被稱為邪惡的聖經版本；這裏英文聖經欽定譯本在「聖徒」（“saints”）之後加上了一個逗點，也同樣產生不良的效果。因為這個逗號將「職事」的範圍局限了，成為只有在位的領袖才可擔當，這不但隱藏了保羅的意思，簡直將保羅的意思顛倒過來，使本來是肢體各盡其職的成為教權主義（clericalism）。（這裏的「教權主義。是一種陰謀和專橫的結合，在其中，牧者宣稱所有屬靈職事都是他個人的責任，不是會眾的責任，而會眾亦同意這種想法。這個觀念在原則上很有問題，實踐起來更會導致聖靈的感動被銷滅。）
 
 　　其實，自上個世紀中葉開始，普利茅斯弟兄會（ Plymouth Brethren）已宣告恩賜的普及性和肢體應各盡其職，但由於他們的宣告摻雜在一種反動性的爭論裏——當時的論，是針對一些在被指為背離真道的教會裏事奉、受薪並曾受訓練的聖品人員——，們的宣告沒有受到多大注意。可是，近年來普世教聯運動和靈恩運動都抓緊這方面的聖經真理，使之漸漸成為基督教的老生常談，因而產生了一些可喜的效果。其中一個效果，就是許多地區的教會紛紛願意在教會生活中實驗新的制度及新的禮儀形式，讓信徒有機會完全發揮他們的恩賜，令會眾整體受益；隨之興起的，是以一種認真的態度，去檢討傳統的崇拜程式和形式，以保障沒有任何恩賜受到窒礙，甚至銷滅聖靈的感動。這一切都是好現象。
+
+*** 正確地看表現
+　　很不幸，這可喜情況也有其負面：三大扭曲了的現象不時破壞我們認識聖靈的新取向。
+　　第—，過分強調平信徒的職事，令一些平信徒低估和輕視牧師的特殊責任，忘記要尊重牧者的職分和領導。
+　　第二，著重指出神慣於賜予聖徒一些與他們信主前的才能毫不相關的恩賜（這強調沒有錯，這的而且確是神的習慣）致使一些人受到蒙蔽，而看不見另一個事實，就是教會生活中最重要的恩賜（如講道、教導、領導、輔導、支持）通常是一些被聖化了的天然才能。
+　　第三，有些人鼓勵基督徒在個人表現上有極度的自由，因此為了平衡這種極端，他們設立了各種極度專制的牧養監察形式，有時甚至比起中世紀教士運用權術控制基督徒良心的種種惡劣方式，有過之而無不及。
+
+　　明顯地，上述發展都有毛病，但糾正這些毛病不等於要貶低他們背後的原則；這些毛病不過是一些不受歡迎的副產品。原則本身是正確的，若不能切實遵守這些原則，就不可能有高質素的教會生活。
+
+　　話說回來，若我們單單專注恩賜的彰顯（例如以說方言為個人的五旬節經驗），以為這就是聖靈對個別信徒的主要職事，因而認為這就是我們應該集中關注的聖靈工作，那就大錯特錯了。只要讀讀哥林多前書，這個錯誤就顯而易見。哥林多教會的信徒因擁有知識而自高自大（八 1、2），他們為自己的恩賜自鳴得意，或者有些人會說，是雄心勃勃。他們藐視一些會友及外來講員，認為這些人的恩賜不及他們；每當他們在教會裏聚會，彼此之間就喜歡競爭和炫耀自己的恩賜。保羅為哥林多教會的信徒知識全備、滿有恩賜而感到十分高興（一 4—7）；但另一方面，保羅指出他們像嬰孩一樣不成熟，又屬乎肉體，行事為人自相矛盾，自招羞愧（三 l—4，五 1 一 13，六 1 一 8，—一 17  22）。他們重視恩賜和自由過於公義、愛心和事奉；保羅說這樣的價值觀是錯誤的。再沒有別的教會像哥林多教會一樣受到使徒這麼多的指責了。
+
+　　哥林多信徒因著自己的知識和恩賜，以為自己是「屬靈的」（Pneumatikoi，一四37）；可是，保羅苦苦的向他們指出，真正屬靈的質素（假定聖靈已賜予我們悟性去瞭解福音，因為這是最基本的屬靈條件）是屬乎道德的。「豈不知你們的身子就是聖靈的殿嗎？這聖靈是從神而來，住在你們裏頭的；並且你們不是自己的人，因為你們是重價買來的。所以要在你們的身子上榮耀神。」（六 19、 20）那遠勝哥林多信徒一切最可誇表現的「更妙之道」，就是愛：「……恒久忍耐，又有恩慈……不嫉妒……不，不 張狂，不作害羞的事，不求自己的益處，不輕易發怒，不計算人的惡，不喜歡不義，只喜歡真理；凡事包容，凡事相信，凡事盼望，凡事忍耐。」（一三 4 一 7）保羅說，儘管你擁有世界上各樣最偉大的恩賜，然而沒有愛，你就算不得什麼（一三 1—3）——靈性上是死的。保羅懷疑哥林多教會的一些人事實上「算不得什麼」，因此，他寫信給他們說：「你們要醒悟為善，不要犯罪，因為有人不認識神。我說這話是要叫你們羞愧。」（一五 34；另參林後一三 5）
+
+　　有一件事情是哥林多信徒需要瞭解的，也是今天我們一些信徒需要重新學習的，這就是清教徒歐文（ John Owen）所說的，有些人可以滿有恩賜卻完全沒有領受恩典，意思是一個人可以有很好的表現，使他人靈性得益，但他本人卻沒有因著真正認識神，經歷聖靈在他心內動工所帶來的內在更新。彰顯聖靈的恩賜表現，與聖靈所結的果子，即活像基督的品德（見加五 22、23）完全是兩回事；一個人可以在恩賜的表現上有驕人成績，卻欠缺像基督的美德。你可以有許多恩賜，但只有少許恩典；你甚至可以有真實的恩賜，但完全沒有真實的恩典；就如巴蘭、掃羅和猶大一樣。歐文寫道，這是由於：
+
+　　屬靈恩賜只屬於頭腦上或理解上的，不管是普通恩賜或特殊恩賜，都不能在心靈裏占一席位。屬靈恩賜是頭腦上的，因為他們是觀念性和理論性，多於實際的。他們只是智慧而已。縱使有些恩賜，諸如行神跡和說方言，能夠在我們裏面找到住處，卻不過是一種特殊力量的「短暫運作」，曇花一現。神的亮光是所有其他恩賜的基礎，屬靈光照是恩賜的實質；所以使徒在希伯來書六章四節中表達出恩賜的次序［歐文將「來世權能」等同於屬靈恩賜」。意志、情感和良心都與這些恩賜無關，因此，這些恩賜無法改變心靈；固然，若憑著光照的功效，也許可以改革生命。雖然一般來說，神不會將恩賜賜予大奸大惡的罪犯，至於那些接受了恩賜的人，若果後來變得惡行昭彰，神多半不會繼續給他們賜下恩賜；然而，一些擁有恩賜的人可能生命從未真正更新，那就無法確保他們不會陷入嚴重的罪中。3
+
+　　故此，沒有人可以用恩賜作為取悅神或得救的明證，屬靈恩賜並不等於這些。
+
+　　在整本新約聖經裏，每逢提及神在人生命中的工作，著眼點往往是倫理道德，而不是靈恩方面的。那真正要緊的是活像基督（不是在恩賜上像基督，而是在愛心、謙卑、順服神的旨意、對別人的需要敏感等各方面像他）。這在保羅為信徒的禱告中表達得尤其清楚。他為哥羅西的信徒祈求，求神「照他榮耀的權能，［使信徒］得以在各樣的力上加力，好叫……。什麼？是透過豐盛有餘的恩賜，好叫他們在事奉上有輝煌的成就嗎？不是，而是好叫他們「凡事歡歡喜喜的忍耐寬容」（西一 11）。同時，他祈求腓立比信徒的愛心滿溢，「……在知識和各樣見識上，多而又多；使你們……。什麼？使你們在講道和爭辯中充滿說服力，或者有醫治的權柄，或者能說流利的方言嗎？不是，而是「作誠實無過的人，直到基督的日子；並靠著耶穌基督結滿了仁義的果子……」（腓 9—11；另參看弗三 14 一 19）。
+
+　　以上這點不單切合那些終日埋首於發掘和使用屬靈恩賜的人，也適用於所有持以下態度的人：這些人也許受自己剛烈的性情所矇騙，總以他們參與基督教活動的多寡，以及推行活動的技巧和成敗來量度聖靈在他們身上的工作。
+
+　　我的論點就是任何把屬靈恩賜（奔走和辦事的能力和意願）看為比屬靈果子（在個人生命中像基督的品格）更重要的心態，在屬靈上都是方向錯誤的，需要矯正。最佳的矯正良藥就是重新調校我們對聖靈工作的觀點，把基督徒的活動和表現看為服事神和榮耀神的途徑，並按這種價值去衡量他們，而不是憑我們的觀感，單單因為某些活動或表現充滿戲劇性、夠搶眼、足以吸引人、能讓人在教會中擔當重要職位，或者使我們對某人的期望提升，就看為寶貴。有關這方面的觀點，我將會在下文討論；目前，讓我們先弄清楚，強調恩賜和活動，跟強調經驗聖靈的能力一樣，都不能領我們進到聖靈真理的核心。讓我們繼續我們的檢討。
