--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -64,3 +64,13 @@
 　　近年來普世教聯運動和靈恩運動都抓緊這方面的聖經真理，使之漸漸成為基督教的老生常談，因而產生了一些可喜的效果。讓信徒有機會完全發揮他們的恩賜，令會眾整體受益；隨之興起的，是以一種認真的態度，去檢討傳統的崇拜程式和形式，以保障沒有任何恩賜受到窒礙，甚至銷滅聖靈的感動。這一切都是好現象。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#總動員事奉][本文]]
+
+*** 正確地看表現
+　　很不幸，這可喜情況也有其負面。過分強調平信徒的職事，令一些平信徒忘記要尊重牧者的職分和領導。也看不見另一個事實，就是教會生活中最重要的恩賜（如講道、教導、領導、輔導、支持）通常是一些被聖化了的天然才能。這些毛病不過是一些不受歡迎的副產品。原則本身是正確的，若不能切實遵守這些原則，就不可能有高質素的教會生活。
+
+　　若我們單單專注恩賜的彰顯，因而認為這就是我們應該集中關注的聖靈工作，那就大錯特錯了。哥林多教會的信徒因擁有知識而自高自大（八 1、2）；每當他們在教會裏聚會，彼此之間就喜歡競爭和炫耀自己的恩賜。他們重視恩賜和自由過於公義、愛心和事奉；保羅說這樣的價值觀是錯誤的。
+
+　　哥林多信徒因著自己的知識和恩賜，以為自己是「屬靈的」；可是，真正屬靈的質素是屬乎道德的。那遠勝哥林多信徒一切最可誇表現的「更妙之道」，就是愛。一個人可以有很好的表現，使他人靈性得益，但他本人卻沒有因著真正認識神，經歷聖靈在他心內動工所帶來的內在更新。彰顯聖靈的恩賜表現，與聖靈所結的果子，完全是兩回事；屬靈恩賜只屬於頭腦上或理解上的，不管是普通恩賜或特殊恩賜，都不能在心靈裏占一席位。
+意志、情感和良心都與這些恩賜無關，因此，這些恩賜無法改變心靈。
+
+　　在整本新約聖經裏，每逢提及神在人生命中的工作，著眼點往往是倫理道德，而不是靈恩方面的。那真正要緊的是活像基督（不是在恩賜上像基督，而是在愛心、謙卑、順服神的旨意、對別人的需要敏感等各方面像他）。任何把屬靈恩賜（奔走和辦事的能力和意願）看為比屬靈果子（在個人生命中像基督的品格）更重要的心態，在屬靈上都是方向錯誤的，需要矯正。最佳的矯正良藥就是重新調校我們對聖靈工作的觀點。
