--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -10,6 +10,7 @@
      - [[#能力的限制][能力的限制]]
    - [[#表現_屬靈恩賜的運用][表現_屬靈恩賜的運用]]
      - [[#總動員事奉][總動員事奉]]
+     - [[#正確地看表現][正確地看表現]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -74,3 +75,5 @@
 意志、情感和良心都與這些恩賜無關，因此，這些恩賜無法改變心靈。
 
 　　在整本新約聖經裏，每逢提及神在人生命中的工作，著眼點往往是倫理道德，而不是靈恩方面的。那真正要緊的是活像基督（不是在恩賜上像基督，而是在愛心、謙卑、順服神的旨意、對別人的需要敏感等各方面像他）。任何把屬靈恩賜（奔走和辦事的能力和意願）看為比屬靈果子（在個人生命中像基督的品格）更重要的心態，在屬靈上都是方向錯誤的，需要矯正。最佳的矯正良藥就是重新調校我們對聖靈工作的觀點。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#正確地看表現][本文]]
