--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -10,6 +10,7 @@
      - [[#能力的限制][能力的限制]]
    - [[#表現_屬靈恩賜的運用][表現_屬靈恩賜的運用]]
      - [[#總動員事奉][總動員事奉]]
+     - [[#正確地看表現][正確地看表現]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
