--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -11,6 +11,8 @@
    - [[#表現_屬靈恩賜的運用][表現_屬靈恩賜的運用]]
      - [[#總動員事奉][總動員事奉]]
      - [[#正確地看表現][正確地看表現]]
+   - [[#保守我們純潔][保守我們純潔]]
+     - [[#「道德掙紮」教義的陷阱][「道德掙紮」教義的陷阱]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -77,3 +79,23 @@
 　　在整本新約聖經裏，每逢提及神在人生命中的工作，著眼點往往是倫理道德，而不是靈恩方面的。那真正要緊的是活像基督（不是在恩賜上像基督，而是在愛心、謙卑、順服神的旨意、對別人的需要敏感等各方面像他）。任何把屬靈恩賜（奔走和辦事的能力和意願）看為比屬靈果子（在個人生命中像基督的品格）更重要的心態，在屬靈上都是方向錯誤的，需要矯正。最佳的矯正良藥就是重新調校我們對聖靈工作的觀點。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#正確地看表現][本文]]
+
+** 保守我們純潔
+　　有些人將聖靈的教義集中在「潔淨」（purifying）和「淨化」（purgation）之上。對他們來說，問題的核心並非經歷聖靈的能力，也非在乎基督徒對外的表現，反而是我們內心的爭戰，在追求聖潔的過程中如何對抗罪惡，尋求聖靈的幫助，保守我們純潔，不受玷污。
+
+　　聖靈使基督徒醒覺到自己的罪汙，並為此感到羞慚，又激勵我們去「……潔淨自己除去身體、靈魂一切的汙穢，敬畏神，得以成聖。」（林後七 1）。基督徒在現世對純潔生命的追求，意味著他們長遠下去一種自覺的矛盾和掙紮，並常會感到成績未達理想；「因為情欲和聖靈相爭，聖靈和情欲相爭，這兩個是彼此相敵，使你們不能作所願意作的。」（加五 17）他在生活中認識到他所作的一切其實可以並且應該做得更好：在每一次嘗試之後，在每一個行動之後，他往往看見他在動機上、在表現上，都有許多可以改善之處。
+
+　　當然，這不是說他永不會達到任何程度的義，保羅並非預料基督徒生命是經常完全失敗的，反而，他期望這是不斷的道德成長。「……當順著聖靈而行，就不放縱肉體的情欲了。」期望信徒努力向前，養成聖潔的習慣，積極操練自己，學像基督。意思是說，一些他從前愛做的事，如今放棄不作。現在，他要追隨自己心靈裏所感受到屬於聖靈的意願，而不陷溺在肉體的情欲中。基督徒生命必須是公義的生命，這正是他悔改和重生的自然流露，也是基本的要求。
+
+　　活在聖靈中的基督徒，會不斷發現他的生命尚未達致本來應有的美善；他經常要面對重重障礙和限制，以及自己扭曲的天性背道而馳的拉扯，他正在打一場前所未有的硬仗；同時，即使是他最好的行為，也不免犯上動機上的罪；他亦發現他每日的生活充滿汙點，他必須每時每刻仰賴神在基督裏的赦罪恩典，否則他就會在罪中失喪；同時，他也認識到自己心靈的軟弱和善變，需要經常求告聖靈賜給他力量，使他在這場內在的鬥爭中能堅持到底。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#保守我們純潔][本文]]
+
+*** 「道德掙紮」教義的陷阱
+　　經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，沒有喜樂，終日內省，陷溺於懊悔自己心靈的腐朽，滋長出灰暗冷漠的人生觀。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
+
+　　這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，一些內向的教會文化和社群，都可以導致上述的情況。聖靈認識不足，也經常是一個原因。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#「道德掙紮」教義的陷阱][本文]]
+
+　
