--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -12,7 +12,7 @@
      - [[#總動員事奉][總動員事奉]]
      - [[#正確地看表現][正確地看表現]]
    - [[#保守我們純潔][保守我們純潔]]
-     - [[#「道德掙紮」教義的陷阱][「道德掙紮」教義的陷阱]]
+     - [[#道德掙紮教義的陷阱][道德掙紮教義的陷阱]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -91,11 +91,11 @@
 
 [[Keep_in_Step_With_the_Spirit__orig.org#保守我們純潔][本文]]
 
-*** 「道德掙紮」教義的陷阱
+*** 道德掙紮教義的陷阱
 　　經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，沒有喜樂，終日內省，陷溺於懊悔自己心靈的腐朽，滋長出灰暗冷漠的人生觀。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
 
 　　這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，一些內向的教會文化和社群，都可以導致上述的情況。聖靈認識不足，也經常是一個原因。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#「道德掙紮」教義的陷阱][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#道德掙紮教義的陷阱][本文]]
 
 　
