--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -12,7 +12,7 @@
      - [[#總動員事奉][總動員事奉]]
      - [[#正確地看表現][正確地看表現]]
    - [[#保守我們純潔][保守我們純潔]]
-     - [[#「道德掙紮」教義的陷阱][「道德掙紮」教義的陷阱]]
+     - [[#道德掙紮教義的陷阱][道德掙紮教義的陷阱]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -129,7 +129,7 @@
 　　
 　　的確，自從革利免（Clement）和俄利根（Origen ）提出清除情欲、淨化靈魂的教導，早期教父記述他們如何頑抗醇酒美人、夜夜笙歌的幻想，以及奥古斯丁用自身的經歷去刻畫罪和恩典的本質以來，信徒不可避免地要與試探對抗的主題就成為基督教靈修教導中一個固定的著重累占。馬丁·路德和加爾文對這方面有很多闡釋，路德宗和加爾文派的信徒，尤其是加爾文派，都緊緊追隨他們的腳蹤。許多世紀以來，不少人曾一次又一次地對這個重點的真確性、現實性和健全性提出質疑與辯論，到如今，已經再沒有什麼見解能認真地挑戰上述重點了。藉著神的恩典，人的生命逐漸被洗滌和潔淨，因此，強調人生掙紮的真實性，是完全合乎聖經和十分恰當的。
 
-*** 「道德掙紮」教義的陷阱
+*** 道德掙紮教義的陷阱
 　　即使這樣，經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們的行事為人愈來愈像法利賽人，注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，對於沒有真正構成威脅的事物，他們亦毫無理由地懼怕受到污染，又頑固地不肯安心；他們變得沒有喜樂，因為盤據他們腦海的，儘是這場屬靈戰爭如何冷酷無情的思想；他們變成病態的人，終日內省，陷溺於懊悔自己心靈的腐朽，久而久之，滋長出灰暗冷漠的人生觀；他們對於道德成長的可能性感到悲觀，不單看自己如此，看別人也是如此；他們對於脫離罪惡，不敢存什麼厚望，最大的希望只不過是不會比以前更糟。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
 
 　　我明白這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，都往往是一些成因；此外，一些內向的教會文化和社群，都可以導致上述的情況。只不過，現在我想指出的，就是對聖靈認識不足，也經常是一個原因。一如我們剛才討論到的其他兩類人一樣，這類人需要從另一個觀點認識聖靈，從上述我所描寫的那種灰暗、自我中心的屬靈狀況中擺脫出來。一會兒，我就會指出什麼是我所認為的正確觀點了。
