--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -13,6 +13,7 @@
      - [[#正確地看表現][正確地看表現]]
    - [[#保守我們純潔][保守我們純潔]]
      - [[#道德掙紮教義的陷阱][道德掙紮教義的陷阱]]
+   - [[#追溯我們的思路][追溯我們的思路]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -133,4 +134,16 @@
 　　即使這樣，經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們的行事為人愈來愈像法利賽人，注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，對於沒有真正構成威脅的事物，他們亦毫無理由地懼怕受到污染，又頑固地不肯安心；他們變得沒有喜樂，因為盤據他們腦海的，儘是這場屬靈戰爭如何冷酷無情的思想；他們變成病態的人，終日內省，陷溺於懊悔自己心靈的腐朽，久而久之，滋長出灰暗冷漠的人生觀；他們對於道德成長的可能性感到悲觀，不單看自己如此，看別人也是如此；他們對於脫離罪惡，不敢存什麼厚望，最大的希望只不過是不會比以前更糟。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
 
 　　我明白這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，都往往是一些成因；此外，一些內向的教會文化和社群，都可以導致上述的情況。只不過，現在我想指出的，就是對聖靈認識不足，也經常是一個原因。一如我們剛才討論到的其他兩類人一樣，這類人需要從另一個觀點認識聖靈，從上述我所描寫的那種灰暗、自我中心的屬靈狀況中擺脫出來。一會兒，我就會指出什麼是我所認為的正確觀點了。
+
+** 追溯我們的思路
+
+　　先讓我們回顧一下所走過的思路。
+
+　　開始的時候，我們注意到聖靈是現今熱門的話題，不同類型的基督徒經驗都確證聖靈的影響，不同基督徒對他的主要職事都有不同的瞭解，這樣表明了（正如我所力言的）並非所有信徒都能正確地看聖靈。許多人對聖靈的觀點雖然未至完全虛假，但肯定是含糊不清和不夠真實的，因此出現了種種缺欠和實際的不平衡現象，有時構成威脅、窒礙聖靈，使我們無力叫聖靈得著榮耀。故此，當務之急，就是更清楚地認識聖靈。
+
+　　為了衡量近代思潮的狀況，我們探討了目前四個關於聖靈職事並極具影響力的主要觀念：生活的力量（power）、事奉上的表現（performance）、行為和動機的純潔（purity）和驅使我們作決定的呈示（presentation）。這幾點事實上是未夠徹底的，我立即可以再加多幾項：辨識力（perception）。催迫（ push or pull) 和個性（personhood）。因為我們一旦離開基督徒的生活圈子，我們會發現有些人實在以為聖靈主要和獨特的工作只是幫助人提高知覺（辨識力），故此，任何意識提升的狀態，不論是宗教的（基督教、印度教，或祭禮的、忘形的、神秘的思想）、美感的（被音樂、性行為、詩章、日落、毒品所引發），或者是理想層面的（熱情的愛國主義、愛情、為一群人或一個目標貢獻自己），都被視為聖靈的印記。我們也曾遇見另一些人，他們忘記了在我們墮落的人性裏那些不受約束的本能、被壓抑的理智及種種複雜病態的妄想如何會被自然界和撒但隨便利用，竟然把聖靈的感動等同於人內心的渴求（一些拉力或催迫），尤其當這些渴求與一些突然、強烈而又重複地出現的視覺和聽覺意象（如幻影、聲音、異夢）相連時，他們就更加確信是聖靈的感動。我們亦曾遇見另一些人，他們聲稱聖靈在有宗教及沒有宗教信仰的人當中一直運行，他的主要工作是幫助人領會自己獨特個性的奧秘、別人的價值，及對真誠關係的需要。
+
+　　若說神的靈永不助人提高醒覺，亦不會透過內心催迫去叫人做某些事情，也不會令未信主的人更欣賞個人的價值，這些說法肯定是錯誤的，我也絕對無意否定聖靈這幾方面的工作，事實上，我甚至會為聖靈這些職事爭辯。可是，今日一般的想法，以為上述其中一項聖靈職事就等於聖靈的主要職事，似乎與事實相去甚遠。其實，自基督來了，聖靈的中心職事是幫助人與基督建立更密切的團契。無疑，因著普通恩典（commongrace），聖靈會在世俗和異教的場合中提高人的辨識力和敏感度，但這從來不是聖靈工作的中心。
+
+　　就拿內在的催迫來說，有些人感到內在的催迫強烈地一再出現，有時候還附以聲音、幻象、異夢等，使他們的感覺更形強烈，驅使他們去強姦、去報復、去傷害人、對兒童進行性侵擾，甚至結束自己的生命。難道這些催迫是出於聖靈的引導嗎？這問題根本不答自明。縈繞心間、擺脫不掉的思想、意念（我們上述所談的，正是這種心神的纏擾）不一定源自神；撒但同樣精於製造使人擺脫不了的衝動，正如他能操縱並加強那些發自我們扭曲了的天性的衝動一樣。故此，對於一些突如其來佔據心神的思想，我們必須仔細檢討（最好是請教別人）然後才下結論，斷定他們是否從神的靈而來。其實，這些思想纏擾心神，叫人擺脫不了，已顯示出他們多半不是源於神的靈了。
 　
