--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -12,6 +12,9 @@
      - [[#正確地看表現][正確地看表現]]
    - [[#保守我們純潔][保守我們純潔]]
      - [[#道德掙紮教義的陷阱][道德掙紮教義的陷阱]]
+   - [[#叫我們醒覺][叫我們醒覺]]
+     - [[#泰萊觀點的毛病][泰萊觀點的毛病]]
+   - [[#追溯我們的思路][追溯我們的思路]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -97,4 +100,27 @@
 
 [[Keep_in_Step_With_the_Spirit__orig.org#道德掙紮教義的陷阱][本文]]
 
-　
+** 叫我們醒覺
+　　第四種看法，認為聖靈的職事基本上就是呈示，就是促使我們醒覺到一些事情。
+
+　　泰萊視聖靈為聖經中一個代表神聖「交流」的名字，他喚起人對物、對己、對他人，以及對神的醒覺，催促我們作出種種抉擇，這些抉擇有時更要求我們作出自我犧牲。自五旬節以來，聖靈持續不斷的工作，就是使個別人覺醒到耶穌的神性，以致他們的生命能活出耶穌在加略山上為罪受死的自我犧牲精神。聖靈要召喚人對這個覺醒作出回應，他在心志相同的人群中所進行的工作最為有效。
+
+　　泰萊從沒有忘記我們是人——罪惡、愚昧、多變、混亂的人——，而聖靈是我們神聖的主，他在我們心裏的工作是超過我們心思所能理解的。他的觀點由始至終都以神為中心。泰萊認識到聖靈不是神賜給我們的一種興奮劑，他不是任由我們操縱和支配的。聖靈是我們神聖的主，他在我們心裏的工作是超過我們心思所能理解的。泰萊不容許我們專注浸裏在我們內裏與罪惡的爭戰中，因為他看見聖靈經常把我們的注意力往上往外導引，叫我們以神、耶穌基督及其他人的事為念。
+
+　　因此，泰萊一方面強調每個人在神面前的獨特性（醒覺是屬於個人的事情），另一方面，他的整體取向始終以小組、教會和社區作主導。對於「自發和出於超理性反應」的靈息表現——表現在醫治、方言，尤其是預言的恩賜上——，泰萊用全人的觀念去解釋這些表現：人不是只懂得作理性分析；整個人的各方面都是聖靈工作的範疇。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#叫我們醒覺][本文]]
+
+*** 泰萊觀點的毛病
+
+[[Keep_in_Step_With_the_Spirit__orig.org#泰萊觀點的毛病][本文]]
+
+** 追溯我們的思路
+
+　　許多人對聖靈的觀點雖然未至完全虛假，但肯定是含糊不清和不夠真實的，有時構成威脅、窒礙聖靈，使我們無力叫聖靈得著榮耀。故此，當務之急，就是更清楚地認識聖靈。
+
+　　我們探討了目前四個關於聖靈職事並極具影響力的主要觀念：生活的力量（power）、事奉上的表現（performance）、行為和動機的純潔（purity）和驅使我們作決定的呈示（presentation）。這幾點事實上是未夠徹底的，可以再加多幾項：辨識力（perception）、催迫（push or pull) 和個性（personhood）。有些人實在以為聖靈主要和獨特的工作只是幫助人提高知覺（辨識力），另一些人，他們忘記了在我們墮落的人性裏那些不受約束的本能、被壓抑的理智及種種複雜病態的妄想如何會被自然界和撒但隨便利用，竟然把聖靈的感動等同於人內心的渴求（一些拉力或催迫），尤其當這些渴求與一些突然、強烈而又重複地出現的視覺和聽覺意象（如幻影、聲音、異夢）相連時，他們就更加確信是聖靈的感動。另一些人聲稱聖靈主要工作是幫助人領會自己獨特個性的奧秘、別人的價值，及對真誠關係的需要。
+
+　　縈繞心間、擺脫不掉的思想、意念不一定源自神；撒但同樣精於製造使人擺脫不了的衝動，正如他能操縱並加強那些發自我們扭曲了的天性的衝動一樣。故此，對於一些突如其來佔據心神的思想，我們必須仔細檢討（最好是請教別人）然後才下結論，斷定他們是否從神的靈而來。其實，這些思想纏擾心神，叫人擺脫不了，已顯示出他們多半不是源於神的靈了。其實，自基督來了，聖靈的中心職事是幫助人與基督建立更密切的團契。無疑，因著普通恩典（commongrace），聖靈會在世俗和異教的場合中提高人的辨識力和敏感度，但這從來不是聖靈工作的中心。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#追溯我們的思路][本文]]
