--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -99,6 +99,17 @@
 
 [[Keep_in_Step_With_the_Spirit__orig.org#道德掙紮教義的陷阱][本文]]
 
+** 叫我們醒覺
+　　第四種看法，認為聖靈的職事基本上就是呈示，就是促使我們醒覺到一些事情。
+
+　　泰萊視聖靈為聖經中一個代表神聖「交流」的名字，他喚起人對物、對己、對他人，以及對神的醒覺，催促我們作出種種抉擇，這些抉擇有時更要求我們作出自我犧牲。自五旬節以來，聖靈持續不斷的工作，就是使個別人覺醒到耶穌的神性，以致他們的生命能活出耶穌在加略山上為罪受死的自我犧牲精神。聖靈要召喚人對這個覺醒作出回應，他在心志相同的人群中所進行的工作最為有效。
+
+　　泰萊從沒有忘記我們是人——罪惡、愚昧、多變、混亂的人——，而聖靈是我們神聖的主，他在我們心裏的工作是超過我們心思所能理解的。他的觀點由始至終都以神為中心。泰萊認識到聖靈不是神賜給我們的一種興奮劑，他不是任由我們操縱和支配的。聖靈是我們神聖的主，他在我們心裏的工作是超過我們心思所能理解的。泰萊不容許我們專注浸裏在我們內裏與罪惡的爭戰中，因為他看見聖靈經常把我們的注意力往上往外導引，叫我們以神、耶穌基督及其他人的事為念。
+
+　　因此，泰萊一方面強調每個人在神面前的獨特性（醒覺是屬於個人的事情），另一方面，他的整體取向始終以小組、教會和社區作主導。對於「自發和出於超理性反應」的靈息表現——表現在醫治、方言，尤其是預言的恩賜上——，泰萊用全人的觀念去解釋這些表現：人不是只懂得作理性分析；整個人的各方面都是聖靈工作的範疇。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#叫我們醒覺][本文]]
+
 ** 追溯我們的思路
 
 　　許多人對聖靈的觀點雖然未至完全虛假，但肯定是含糊不清和不夠真實的，有時構成威脅、窒礙聖靈，使我們無力叫聖靈得著榮耀。故此，當務之急，就是更清楚地認識聖靈。
