--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -13,6 +13,8 @@
      - [[#正確地看表現][正確地看表現]]
    - [[#保守我們純潔][保守我們純潔]]
      - [[#道德掙紮教義的陷阱][道德掙紮教義的陷阱]]
+   - [[#叫我們醒覺][叫我們醒覺]]
+     - [[#泰萊觀點的毛病][泰萊觀點的毛病]]
    - [[#追溯我們的思路][追溯我們的思路]]
 
 * 1_看清楚聖靈
@@ -134,6 +136,47 @@
 　　即使這樣，經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們的行事為人愈來愈像法利賽人，注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，對於沒有真正構成威脅的事物，他們亦毫無理由地懼怕受到污染，又頑固地不肯安心；他們變得沒有喜樂，因為盤據他們腦海的，儘是這場屬靈戰爭如何冷酷無情的思想；他們變成病態的人，終日內省，陷溺於懊悔自己心靈的腐朽，久而久之，滋長出灰暗冷漠的人生觀；他們對於道德成長的可能性感到悲觀，不單看自己如此，看別人也是如此；他們對於脫離罪惡，不敢存什麼厚望，最大的希望只不過是不會比以前更糟。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
 
 　　我明白這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，都往往是一些成因；此外，一些內向的教會文化和社群，都可以導致上述的情況。只不過，現在我想指出的，就是對聖靈認識不足，也經常是一個原因。一如我們剛才討論到的其他兩類人一樣，這類人需要從另一個觀點認識聖靈，從上述我所描寫的那種灰暗、自我中心的屬靈狀況中擺脫出來。一會兒，我就會指出什麼是我所認為的正確觀點了。
+
+** 叫我們醒覺
+　　現在，我們必須探討第四種看法，他認為聖靈的職事基本上就是呈示；簡單來說，就是促使我們醒覺到一些事情。這是泰萊主教（BIShop J．V．Tpylor）的著作《仲介之神》（ The Go-between God）裏面所載的觀點。
+
+　　泰萊視聖靈（希伯來文的 ruach，希臘文的 pneuma；兩個原文的意思是「吹動的風」或「呼出的氣息」）為聖經中一個代表神聖「交流」（“current of communication”）的名字，他喚起人對物、對己、對他人，以及對神的醒覺，使人覺察到這一切都是重要的現實，催促我們作出種種抉擇，這些抉擇有時更要求我們作出自我犧牲。聖靈的影響，就是藉著這種「覺醒——抉擇——犧牲」的行為模式顯出來；聖靈就是那位「人生命的仲介之靈」（“life－giving　Go－Between）4，他透過自然界、歷史、人類生命， 及世界宗教施行他的工作，並在其中運行。這種覺醒是對意義和要求的頓然領會，是理性而又感性的。每一次的覺醒和對覺醒的回應，都影響著事後的抉擇和犧牲。自五旬節以來，聖靈持續不斷的工作，就是使個別人覺醒到耶穌的神性，以致他們的生命能活出耶穌在加略山上為罪受死的自我犧牲精神。聖靈要召喚人對這個覺醒作出回應，他在心志相同的人群中所進行的工作最為有效，因為整個群體可以喚起個人的覺醒，而個人又可以提高群體的覺醒。這些論點是泰萊根據歷史悠久和歷史短淺的教會的實際經驗，經過連串反省後得出來的；他視這些教會群體為神聖使命的表徵和途徑，他所有思想都是圍繞著這個中心思想組織起來的。
+
+　　我們以上所綜覽的幾種對聖靈的看法，受一般牧者大力提倡，卻往往被學者挑剔地評為「大眾化的敬虔」；泰萊是位有恩賜的神學家，故此，他的見解比其他人的看法較有深度是不足為奇的。他著作的大部分內容都使人印象深刻。首先，他的觀點由始至終都以神為中心。不僅他的「交流」關鍵思想是根據三一真理的啟示，源自聖靈那「在聖父與聖子之間的永恆職分，使兩者互相察覺」5，而且他比其他人對於聖靈自由主權的本質有更深遠的洞見——那些人認為聖靈是神賜給我們的力量，供我們使用，或讓我們有所表現；只要我們除去障礙，這股力量就會從我們心裏自動釋放出來。泰萊認識到聖靈不是神賜給我們的一種興奮劑，他不是任由我們操縱和支配的。所以，泰萊永不跟隨別人膚淺的言論；他們談論讓聖靈在我們裏面得釋放，其實只不過是靠賴自己的抉擇，憑著自己的意志，根本不是聖靈的作為。泰萊在講述聖靈是我們的溝通者和激勵者之餘，從沒有忘記我們是人——罪惡、愚昧、多變、混亂的人——，而聖靈是我們神聖的主，他在我們心裏的工作是超過我們心思所能理解的。泰萊不容許我們專注浸裏在我們內裏與罪惡的爭戰中，因為他看見聖靈經常把我們的注意力往上往外導引，叫我們以神、耶穌基督及其他人的事為念。
+
+　　因此，泰萊一方面強調每個人在神面前的獨特性（醒覺是屬於個人的事情），另一方面，他的整體取向始終以小組、教會和社區作主導，毫不宣導個人主義。不過，對於文化習尚在聖靈帶領的社群中施加任何限制，他原則上不以為然。他指出，既然耶穌並不屬於他時代的既成文化模式，聖靈在今日也會拆毀一切我們試圖限制他的文化框框。
+
+　　對於「自發和出於超理性反應」的靈息表現——表現在醫治、方言，尤其是預言的恩賜上——，泰萊亦很靈巧地建構了一套神學思想。他用全人的觀念去解釋這些表現：人不是只懂得作理性分析；整個人的各方面都是聖靈工作的範疇。不過他警誡我們防備自我主義。自我主義與不成熟的思想行為互為因果，往往危害靈恩的精神。泰萊再次表現他的智慧（雖然他所表現的智慧或許並非必需）。他探測那既險且真的道理：人愈趨成熟，聖靈的道德指引便愈有創意，帶領我們超越（當然不是偏離）有聖經根據的正規律例範疇。
+
+　　這些都是真正的灼見。
+
+*** 泰萊觀點的毛病
+
+　　與上述長處並排的，是兩項缺點——這些缺點是基於泰萊未能完全按著聖經嚴格的要求去徹底發展他的聖經觀點。
+
+　　首先，他對聖靈所呈示的道說得太少。他討論這個主題時，引用兩節論到神的話語（words）的經文（賽五九 21；民二三 5），然後立即說到約翰福音及教父們所講述的道（Word）——那有位格的神聖之道（personal divineLogos）——，好像話語和道是同一東西。6 然而無論是聖經上的用法或普通常識都告訴我們兩者並非一樣。那些見證有位格的道（the personal Word）的話語（ words），顯然與道（Word）有別。（在這裏，泰萊是追隨巴特「Karl Barth」的講法。巴特肯定地宣稱這些是表現神獨一的道三種形式的其中兩種，但這宣稱本身在神學上是一個謎：聖經裏沒有這種說法；巴特曾聲稱他憎惡那些脫離聖經的推測，但在半個世紀以後的今天看來，似乎他自己也在不知不覺間採納了那種方法。）
+
+　　對於聖靈所激發的覺醒，泰萊的論說尚欠完善，他還需要做的，就是分析聖靈如何證實神所啟示的話語、教訓和資訊；這些教導和資訊，是先知和使徒們從神那要領受，然後重新安排，再以聖經的形式書寫出來的。此外，泰萊還需要分析聖靈如何擔當詮釋者的角色，帶領我們實在地掌握神此時此刻對我們說什麼話。可是，泰萊對這些問題沒有提供任何分析。
+
+　　其次，泰萊對於聖靈所呈示的基督說得太少。出乎意料之外，他並沒有系統地綜覽保羅和約翰對聖靈的論說，沒有探討這兩位對聖靈瞭解極深的偉大新約神學家如何闡述聖靈在多方面體現基督，這大大削弱了他的觀點。他所述有關聖靈的引證使我們覺察到基督，他雖一方面專注講述歷史中的耶穌，另一方面卻對耶穌現今掌權、將要再來、他不斷為我們代求、現在與我們的關係、基督徒與他永恆同在的確實盼望等等，都沒有一視同仁地強調；這些欠缺徹底沖淡了對基督醒覺的意義。
+
+　　泰萊寫道：「那充滿我們異象的基督，不管他是歷史中的耶穌、活著的救主，還是那為我們捨身流血的基督，或是那道和宇宙的主，又或是我的鄰舍和窮人的基督，都不打緊；這些只不過是他存在的某方面。無論我們覺得哪一方面最為真實，要緊的是我們崇敬他。」沒錯，這裏說得很好，但假若泰萊補充說，我們欲要心中的基督形象配得上基督自己，又符合聖經的真理，那我們就需要將基督各方面的真理連結起來，並且加上更多，這將成為更好的教義。
+
+　　就最後的分析來說，我們習慣上怎樣去思想基督，實在是舉足輕重的事；我們屬靈的健康很在乎我們對他是否有足夠的認識，因為認識基督不單只是認識他宇宙性的地位和他在地上的歷史事蹟；反之，猶如墨蘭頓（Melanchthon）很早以前說過，是要認識他的好處——即是要知道耶穌在他所擔當的各種角色中，諸如使者、中保和神救恩的體現等，賜與我們什麼。不過，若然你對基督的認識很少，你對他的好處自然也所知有限。
+
+　　我不是說信徒從耶穌領受的不會超乎他所知的。我先前談論過神的豐盛慈愛，他為愛他的人所作的，是「……超過（新國際譯本「NIV」譯作『無限量的超乎』）我們所求所想的」（弗三 20）；我們應在這裏回想一下這個要點。耶穌基督對於信徒是始終如一的（神人二性的救主、主、中保、牧人、倡議者、先知、祭司、君王、代贖的祭牲、生命、盼望等等），不在乎他們腦海中對這種與基督的多重關係有多深或多淺的瞭解。舉例來說，使徒兼神學家保羅對這些關係的瞭解，比路加福音二十三章三十九至四十三節中悔改的強盜認識更深，然而耶穌的拯救對任何人都同樣豐厚，我們可以肯定，使徒和強盜此時都同在寶座面前；他們在地上擁有神學知識的多寡，絕不影響他們在天家享受與基督同在的福樂。「……同有一位主……厚待一切求告他的人」（羅一○12）——主不單厚待猶太人和希利尼人，也同時厚待不擅長也沒有博覽神學的人，這一點是無可置疑的。
+
+　　但是我所關注的，就是愈少人認識基督，愈早需要提出以下問題：既然他們對耶穌只有蒙朧而歪曲的觀念，他們對耶穌的回應究竟能否真正算為基督徒的信仰？人愈是偏離聖經所述有關耶穌的各種道理（前列的也許是基要道理），掌握基督真理就愈少，以至到一個地步，就是經常談論基督（回教徒、馬克思主義者、通神學者等都會這樣），但實際上並不認識他。
+
+　　因為上述提及的聖經真理，都指出基督是我們問題的答案；這些問題源自神的聖潔和我們的罪，是聖經教導我們針對我們自己與神的關係而發出的。人與這些聖經啟示距離愈遠，便愈發感到那些問題與自己無關，結果他對真正的基督和真正的神的認識便會愈少。假如有人以為今日的英國是被一個前度搖擺舞蹈家依利莎伯所統治，他就住在波利尼西亞一間木屋裏，隨便按他自己的意思立法，這個人可以說是根本對真正的女皇完全無知。同樣道理，要對耶穌的救贖有真實正確的認識，單單知道他的名字是不足夠的。
+
+　　或者，讓我用另一個講法去解釋：耶穌基督的真理與新約神學的真理結合（而我像主流基督教傳統一樣依從新約神學的宣稱），意思正是說聖父藉著聖靈給聖子作見證。固然，只有這神學中的耶穌，才是真正的耶穌。不管在保羅、約翰、路加、馬太、彼得、希伯來書的作者，或誰人的筆下，這新約神學實質上都是宣告耶穌基督的拯救，他拯救我們脫離那捆鎖我們的假神、假信念、假方法、假希望，以及在創造主面前的各種虛假態度等，內裏包藏著各樣外表吸引的宗教和哲學思想。新約的宣告就是為這整個虛謊和假像的萬花筒疹症，他各樣虛假根藏在種種具體的表現中，不知不覺地把普通啟示壓抑了，誤導人心靈中崇拜的天性，使人對神的福音無知或抗拒。羅馬書一章十八節至三章二十節的表達，是斬釘截鐵的；而蔔仁納（ Emil Brunner）也實在寫得正確：「所有宗教都嘗試重見那失落了的神的真理，所有宗教都渴求神的光和神的愛；但在所有宗教裏，亦同時出現一個無底深淵，真理被邪惡扭曲了，而人更用盡方法去逃避神。」8
+
+　　若然如此，我們必須憑愛心堅定地指出神所教導的福音與其他解釋世界真象的說法存在對立，決不能稍有寬讓或基於禮貌而淡然處之。不然，新約聖經所講述「……基督那測不透的豐富……」（弗三 8），以及他拯救我們脫離罪的權勢，除去我們的罪，最終使我們完全擺脫罪和他的果子等闡述，都會因為我們俯就那不協調的思想模式而被沖淡。這實際上是極端而具破壞性地視福音為一種相對的道理。雖然在這些不協調的思想架構裏，也許會有某些新約思想特別受到重視，但新約神學的絕對正確性，他那肯定的地位、絕對的權威，就經常被否定——在這裏，否定的意思是不容許新約神學批判及修正各種思想架構：如印度教、佛教、猶太教、回教、馬克思主義或其他宗教。因為事實上並非所有宗教和所有思潮都提出關乎神和人的相同基本問題，亦不是朝相同的方向尋找答案。
+
+　　有兩種對話正在進行，他們彼此有極大的分別。第一種企圖尋索基督教與其他信仰之間的對照，而這個對照至終是否定一方以肯定另一方的。第二種對話是嘗試在其他宗教信仰中尋找基督，或勉強把基督移植在其他宗教信仰中。有一點必須指出，雖然泰萊談到種族宗教與基督教後期種種信仰如何透過聖靈接觸基督，從而經歷轉變、更新、死亡與復活 9，但我們完全不能確定泰萊所追尋的是第一種而不是第二種對話。這種含糊的情況其實是他著作裏第三個弱點，是由前兩個弱點引發出來的。這兩個弱點前文已經指出——他沒有認真考慮到那「已記下來的神的話語」10 的實在，同時，對於關乎基督的知識，他忽略了在種種試驗以外，必須以新約中論到基督的教導作為量度的準繩。
+
+　　在泰萊的聖靈觀裏，聖靈是一位居間的聖者，他的工作是呈露現實、驅使人作出抉擇，及喚起人以犧牲作回應。前面所述絕不是批評泰萊這個中心思想。要找出能令我們瞭解聖靈一直以來在信徒生命中職事的新約主要思想，並不需要遠超泰萊卻步之處。他帶領了我們，雖不中亦不遠。
 
 ** 追溯我們的思路
 
