--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -13,6 +13,8 @@
      - [[#正確地看表現][正確地看表現]]
    - [[#保守我們純潔][保守我們純潔]]
      - [[#道德掙紮教義的陷阱][道德掙紮教義的陷阱]]
+   - [[#叫我們醒覺][叫我們醒覺]]
+     - [[#泰萊觀點的毛病][泰萊觀點的毛病]]
    - [[#追溯我們的思路][追溯我們的思路]]
 
 * 1 看清楚聖靈
@@ -109,6 +111,10 @@
 　　因此，泰萊一方面強調每個人在神面前的獨特性（醒覺是屬於個人的事情），另一方面，他的整體取向始終以小組、教會和社區作主導。對於「自發和出於超理性反應」的靈息表現——表現在醫治、方言，尤其是預言的恩賜上——，泰萊用全人的觀念去解釋這些表現：人不是只懂得作理性分析；整個人的各方面都是聖靈工作的範疇。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#叫我們醒覺][本文]]
+
+*** 泰萊觀點的毛病
+
+[[Keep_in_Step_With_the_Spirit__orig.org#泰萊觀點的毛病][本文]]
 
 ** 追溯我們的思路
 
